--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,5 +2,5 @@
   "version": 2,
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
 
-  "routes": [{ "src": "api/(.*)", "dest": "/" }]
+  "routes": [{ "src": "/(.*)", "dest": "/api" }]
 }
