--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,3 @@
 {
-  "version": 2,
-  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
-
-  "routes": [{ "src": "/(.*)", "dest": "/api" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
